[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/dice_panel.gd" type="Script" id=1]

[node name="DicePanel" type="Node2D"]
z_index = 1
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 576.0
margin_bottom = 128.0
mouse_filter = 2
color = Color( 0.25098, 0.4, 0.384314, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonRollDice" type="Button" parent="."]
margin_left = 16.0
margin_top = 20.0
margin_right = 112.0
margin_bottom = 108.0
text = "Roll
Dice"

[node name="ButtonConfirm" type="Button" parent="."]
margin_left = 464.0
margin_top = 20.0
margin_right = 560.0
margin_bottom = 108.0
text = "Confirm"

[node name="Position1" type="Position2D" parent="."]
position = Vector2( 192, 64 )

[node name="Position2" type="Position2D" parent="."]
position = Vector2( 288, 64 )

[node name="Position3" type="Position2D" parent="."]
position = Vector2( 384, 64 )

[node name="Position4" type="Position2D" parent="."]
position = Vector2( 480, 64 )

[connection signal="pressed" from="ButtonRollDice" to="." method="_on_Button_Roll_Dice_pressed"]
[connection signal="pressed" from="ButtonConfirm" to="." method="_on_Button_Confirm_pressed"]
